// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown aje-dropdown is-medium has-error"
  >
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <label
        class="sc-dkrFOg hmuQfz aje-label aje-label aje-label"
        for="Combobox-:r0:-input"
      >
        Text Label
      </label>
      <p
        class="sc-hLBbgP bLlziI aje-label--message"
      >
        message
      </p>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r0:-listbox"
        class="sc-pyfCe bYPcJV aje-combobox__input is-searchable"
        id="Combobox-:r0:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r0:-listbox"
          aria-describedby="Combobox-:r0:-error"
          aria-labelledby="Combobox-:r0:-label"
          class="sc-jrcTuL jmNKqj"
          id="Combobox-:r0:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r0:-label"
          class="sc-kDvujY kycYbV aje-combobox__menu"
          id="Combobox-:r0:-listbox"
          role="listbox"
        />
      </div>
    </div>
    <p
      class="sc-eDvSVe kXVgQt aje-label--error"
      id="Combobox-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe sc-iBYQkv  egptak aje-dropdown--floating aje-dropdown--floating is-medium has-error"
  >
    <div
      class="sc-ftTHYK bwEwxk aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r1:-listbox"
        class="sc-pyfCe bYPcJV aje-combobox__input is-searchable"
        id="Combobox-:r1:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r1:-listbox"
          aria-describedby="Combobox-:r1:-error"
          aria-labelledby="Combobox-:r1:-label"
          class="sc-jrcTuL jmNKqj"
          id="Combobox-:r1:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="sc-gKPRtg ejGDae aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r1:-label"
          class="sc-kDvujY kycYbV aje-combobox__menu"
          id="Combobox-:r1:-listbox"
          role="listbox"
        />
      </div>
      <label
        class="sc-dkrFOg hmuQfz aje-label"
        for="Combobox-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="sc-eDvSVe kXVgQt aje-label--error"
      id="Combobox-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
